# track_converter

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
app/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
