[package]
name = "zgpsconv-studio"
version = "0.1.0"
description = "A small Tauri utility for zGPSconv-compatible track conversion"
authors = ["nukewarrior"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
xmltree = "0.11"
